# watercar

./: CMakeLists.txt  water_car_try_v02.py  watercar.ioc  引脚配置.csv
Core/Inc/: bsp_encoder.h  bsp_key.h  bsp_motor.h  main.h  mecanum.h  odom.h  pid.h  stm32f4xx_it.h  trajectory.h
Core/Src/: bsp_encoder.c  bsp_key.c  bsp_motor.c  gpio.c  main.c  mecanum.c  odom.c  pid.c  stm32f4xx_it.c  tim.c  trajectory.c
